--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.12.0",
+    "picnic-api": "^3.1.3",
     "zod": "^3.24.4",
     "zod-to-json-schema": "^3.24.5"
   },
