chore(package.json): update script name from 'inspect-watch' to 'inspect:watch' feat(inspect.js): refactor CLI command building for flexibility and readability feat(picnic-tools.ts): enhance 'picnic_get_categories' tool with more flexible filtering options and use case optimization feat(picnic-tools.ts): add 'picnic_get_category_details' tool for detailed category information retrieval with customizable options feat(picnic-tools.ts): introduce 'picnic_analyze_response_size' tool for analyzing response size and structure for optimization

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "typecheck": "tsc --noEmit",
     "prepare": "npm run build",
     "inspect": "node -r dotenv/config ./scripts/inspect.js",
-    "inspect-watch": "node ./scripts/inspect-watch.js",
+    "inspect:watch": "node ./scripts/inspect-watch.js",
     "test": "vitest run --config vitest.config.ts",
     "test:watch": "vitest watch --config vitest.config.ts"
   },
