--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Model Context Protocol (MCP) server template for Picnic, order your groceries using AI",
   "license": "MIT",
   "type": "module",
-  "main": "./dist/bundle.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:ivo-toby/mcp-picnic.git"
@@ -34,7 +34,7 @@
     "test:watch": "vitest watch --config vitest.config.ts"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.12.0",
+    "@modelcontextprotocol/sdk": "^1.18.1",
     "picnic-api": "^3.1.3",
     "zod": "^3.24.4",
     "zod-to-json-schema": "^3.24.5"
